test/parser.d/invalid/typedef-struct-4.surc.bad
def struct Tuple(A)(Bool) = { tuple(first: A)(second: Bool) }
